--- a/rummikub-discord/client/.env.production
+++ b/rummikub-discord/client/.env.production
@@ -1,2 +1,2 @@
 VITE_DISCORD_CLIENT_ID=1432451260484943933
-VITE_SERVER_URL=https://your-app.onrender.com
+VITE_SERVER_URL=https://rummy-server-4m92.onrender.com
